<resources>
    <string name="app_name">LayoutsBorja</string>
    <string name="type_here">Type here:</string>
    <string name="button">Button</string>
    <string name="button1">Button</string>
    <string name="Cancelar" />
    <string name="OK" />
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="tex">+</string>
    <string name="menos">-</string>
    <string name="c">C</string>
</resources>