<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LineLay">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        tools:ignore="ExtraText"><![CDATA[>

        ]]>

        <TableRow
            android:layout_width="233dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button15"
                android:layout_width="wrap_content"
                android:layout_height="140dp"

                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:text="@string/_1" />

            <Button
                android:id="@+id/button14"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:text="@string/_2" />

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:text="@string/_3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button18"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:text="@string/_4" />

            <Button
                android:id="@+id/button17"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:text="@string/_5" />

            <Button
                android:id="@+id/button16"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:text="@string/_6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button21"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:text="@string/_7" />

            <Button
                android:id="@+id/button20"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:text="@string/_8" />

            <Button
                android:id="@+id/button19"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:text="@string/_9" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button25"
                android:layout_width="299dp"
                android:layout_height="162dp"
                android:layout_span="3"
                android:text="@string/_0" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button13"
                android:layout_width="51dp"
                android:layout_height="200dp"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:layout_weight="1"
                android:text="@string/tex" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button22"
                android:layout_width="67dp"
                android:layout_height="200dp"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:layout_weight="1"
                android:text="@string/menos" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button23"
                android:layout_width="wrap_content"
                android:layout_height="204dp"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:layout_weight="1"
                android:text="@string/c" />
        </TableRow>

    </TableLayout>

</LinearLayout>